# cookie-monster

./: README.md  cookie_factory.py  cookie_unsigner.py  main.py  pyproject.toml
tests/: test_django_sign.py  test_express_session.py
