[project]
name = "cookie-monster"
version = "0.1.0"
description = "Unsign cookie session that have been signed using weak or leaked secret key"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mypy>=1.17.1",
    "pytest>=8.4.1",
    "ruff>=0.12.8",
]

[tool.pytest.ini_options]
testpaths = [
    "tests"
]
